# dodo

./: .clang-format  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  PKGBUILD  README.md  TODO.md  USAGE.md  build_appimage.sh  build_deb.sh  build_release.sh  config.toml  dodo-mupdf.pro  dodo-template.desktop  dodo-template.desktop.in  dodo.desktop  dodo.pro  flatpak_helper.sh  install.sh  lektra-template.desktop.in  resources.qrc  uninstall.sh
.cache/clangd/index/: dodo.cpp.7C987477AA595AB4.idx  dodo.hpp.F77B66545175B2D0.idx  main.cpp.12ACAC2CAECC2F02.idx
flatpak/: io.github.dheerajshenoy.dodo.desktop  io.github.dheerajshenoy.dodo.metainfo.xml  io.github.dheerajshenoy.dodo.yaml
logo/: about.xcf
resources/: banner.xcf  logo.xcf
src/: AboutDialog.cpp  AboutDialog.hpp  Annotation.cpp  Annotation.hpp  BrowseLinkItem.hpp  CircleLabel.hpp  CommandBar.cpp  CommandBar.hpp  CommandPaletteWidget.cpp  CommandPaletteWidget.hpp  Config.hpp  DocumentView.cpp  DocumentView.hpp  DodoConfig.hpp  DraggableTabBar.hpp  EditLastPagesWidget.cpp  EditLastPagesWidget.hpp  ElidableLabel.hpp  FloatingOverlayWidget.cpp  FloatingOverlayWidget.hpp  GotoLinkItem.hpp  GraphicsPixmapItem.hpp  GraphicsScene.cpp  GraphicsScene.hpp  GraphicsView.cpp  GraphicsView.hpp  HighlightAnnotation.hpp  HighlightItem.hpp  HighlightSearchWidget.cpp  HighlightSearchWidget.hpp  HighlightsDialog.cpp  HighlightsDialog.hpp  JumpMarker.hpp  LRUCache.hpp  LinkHint.hpp  LinkItem.hpp  MarkManager.cpp  MarkManager.hpp  MessageBar.cpp  MessageBar.hpp  (+48 more)
src/Annotations/: Annotation.cpp  Annotation.hpp  HighlightAnnotation.hpp  RectAnnotation.hpp  TextAnnotation.hpp
src/commands/: DeleteAnnotationsCommand.hpp  RectAnnotationCommand.hpp  TextHighlightAnnotationCommand.hpp
src/llm/: ActionHandler.hpp  ChatWidget.hpp  ContextManager.cpp  ContextManager.hpp  CopilotProvider.hpp  LLMProvider.hpp  LLMService.hpp  LLMWidget.cpp  LLMWidget.hpp  role.txt
src/llm/http/: HttpStreamClient.cpp  HttpStreamClient.hpp
src/llm/providers/: LLMProvider.hpp
src/llm/providers/ollama/: OllamaProvider.cpp  OllamaProvider.hpp
